--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Lyubomir Ternavskiy">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
+    <link rel="SHORTCUT ICON" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="container">
